--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -52,12 +52,11 @@ body, input, button, textarea{
 
 .container{
   max-width: 700px;
+  max-height: 800px;
 }
 
 .main{
   display: flex;
-  display: 1;
-
   background: var(--color-box-base);
   width: 100%;
   max-width: 74rem;
@@ -65,7 +64,6 @@ body, input, button, textarea{
 
   overflow: hidden;
   padding: 30px;
-
 }
 
 .text-strong{
